pkg/main/default/objects/CustomParameterMap__c/CustomParameterMap__c.object-meta.xml
<CustomObject>
    <label>DocuSign Custom Parameter Map</label>
    <nameField>
        <displayFormat>CPM{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Custom Parameter Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>