pkg/main/default/objects/CustomParameterMap__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>TextArea</type>
</CustomField>