pkg/main/default/objects/CustomParameterMap__c/fields/SubValue__c.field-meta.xml
<CustomField>
    <fullName>SubValue__c</fullName>
    <label>SubValue</label>
    <length>99</length>
    <type>Text</type>
</CustomField>