pkg/main/default/objects/CustomParameterMap__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>99</length>
    <type>Text</type>
</CustomField>