pkg/main/default/objects/CustomParameterMap__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>